@@ -1,3 +1,6 @@
+7 November 2012: Matthijs
+- Don't add double RRSIGs generated by same key for DNSKEY RRset.
+
 29 Oktober 2012: Matthijs
 - Put back occluded data in signed zone files/transfers.
   Make sure that their RRtypes don't end up in the NSEC(3) chain.
